# dch-qa

./: .gitignore  .travis.yml  README.md  cabal.project  cabal.project.freeze  dch-qa.cabal  monadfix-site-tools.cabal  new-install.sh  shell.nix  stack.yaml
src/: FromYAML.hs  LensUtil.hs  Main.hs  MarkdownUtil.hs  QaSession.hs  ResolvePeople.hs  ToFeed.hs  ToHTML.hs  Types.hs
src/ToFeed/: Blog.hs  Qa.hs
src/ToHTML/: Blog.hs  Common.hs  Qa.hs
src/ToYAML/: Blog.hs  Qa.hs
