name:                dch-qa
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable dch-qa
  main-is:
    Main.hs
  other-modules:
    QaSession
    FromYAML
    ToHTML
    ResolvePeople
    LensUtil
  build-depends:
    base >=4.10 && <4.11,
    containers,
    unordered-containers,
    yaml,
    lucid,
    time,
    text,
    bytestring,
    system-filepath,
    exceptions,
    mmark,
    lens,
    turtle
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    ApplicativeDo,
    OverloadedStrings,
    RecordWildCards,
    ScopedTypeVariables,
    FlexibleInstances,
    FlexibleContexts,
    ViewPatterns,
    TypeApplications,
    TypeFamilies
  ghc-options:
    -Wall -O2
