name:                dch-qa
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable dch-qa
  main-is:
    Main.hs
  other-modules:
    Types
    FromYAML
    ToHTML
    ToFeed
    ResolvePeople
    LensUtil
  build-depends:
    base >=4.10 && <4.11,
    base-prelude,
    bytestring,
    containers,
    exceptions,
    feed,
    filepath,
    foldl,
    lens,
    lucid,
    mmark >=0.0.5,
    reflection,
    system-filepath,
    text,
    time,
    turtle,
    uniplate,
    unordered-containers,
    xml,
    xml-conduit,
    xml-types,
    yaml
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude,
    ApplicativeDo,
    OverloadedStrings,
    RecordWildCards,
    ScopedTypeVariables,
    FlexibleInstances,
    FlexibleContexts,
    ViewPatterns,
    TypeApplications,
    TypeFamilies,
    LambdaCase
  ghc-options:
    -Wall -O2
