name:                monadfix-site-tools
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable monadfix-gen
  main-is:
    Main.hs
  other-modules:
    Types
    FromYAML
    ToHTML.Qa
    ToHTML.Common
    ToFeed.Qa
    ResolvePeople
    LensUtil
    MarkdownUtil
  build-depends:
    base >=4.11 && <4.13,
    base-prelude,
    bytestring,
    containers,
    exceptions,
    feed,
    filepath,
    foldl,
    lens,
    lucid,
    mmark >=0.0.5,
    mmark-ext >=0.2,
    megaparsec,
    modern-uri >=0.2,
    named,
    reflection,
    system-filepath,
    tagged-aeson,
    text,
    time,
    turtle,
    uniplate,
    unordered-containers,
    xml,
    xml-conduit,
    xml-types,
    yaml
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude,
    ApplicativeDo,
    OverloadedStrings,
    RecordWildCards,
    ScopedTypeVariables,
    FlexibleInstances,
    FlexibleContexts,
    ViewPatterns,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    DataKinds,
    OverloadedLabels,
    LambdaCase
  ghc-options:
    -Wall -O2
